adding test image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
         .content {
             margin-top: 50px;
+            text-align: left;
         }
         img {
             max-width: 100%;
@@ -26,7 +27,7 @@
     <div class="content">
         <h1>Welcome to My Page</h1>
         <p>This is a sample webpage displaying some text and an image.</p>
-        <img src="https://via.placeholder.com/600x400" alt="Sample Image">
+        <img src="/test-image.png" alt="Sample Image">
     </div>
 </body>
 </html>
