--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
         <h1>Welcome to My Page</h1>
         <p>This is a sample webpage displaying some text and an image.</p>
-        <img src="/test-image.png" alt="Sample Image">
+        <img src="images/test-image.png" alt="Sample Image">
     </div>
 </body>
 </html>
