--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Text and Image Display</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Lucida Grande', Arial, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
@@ -14,20 +14,33 @@
         }
         .content {
             margin-top: 50px;
+            margin-left: 50px;
             text-align: left;
+        }
+        .image-text-container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 20px;
         }
         img {
             max-width: 100%;
             height: auto;
             margin-top: 20px;
+            margin-left: 20px;
         }
     </style>
 </head>
 <body>
     <div class="content">
+        <img src="images/test-image.png" alt="Sample Image">
         <h1>Welcome to My Page</h1>
         <p>This is a sample webpage displaying some text and an image.</p>
-        <img src="images/test-image.png" alt="Sample Image">
+
+        <div class="image-text-container">
+            <img src="images/test-image.png" alt="Sample Image">
+            <p>Text directly to the right of the image. This text explains the image or provides additional context.</p>
+        </div>
     </div>
 </body>
 </html>
