--- a/index.html
+++ b/index.html
@@ -4,43 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text and Image Display</title>
-    <style>
-        body {
-            font-family: 'Lucida Grande', Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-        }
-        .content {
-            margin-top: 50px;
-            margin-left: 50px;
-            text-align: left;
-        }
-        .image-text-container {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            gap: 20px;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-            margin-left: 20px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="banner">
+        <a href="projects.html">Projects</a>
+    </div>
     <div class="content">
-        <img src="images/test-image.png" alt="Sample Image">
-        <h1>Welcome to My Page</h1>
-        <p>This is a sample webpage displaying some text and an image.</p>
 
-        <div class="image-text-container">
+
+        <div class="image-text-system">
             <img src="images/test-image.png" alt="Sample Image">
-            <p>Text directly to the right of the image. This text explains the image or provides additional context.</p>
+            <div class="image-text-container">
+                <h1 class="large-title">Title</h1>
+                <p class="small-text">Text</p>
+            </div>
+
         </div>
     </div>
 </body>
 </html>
+
